force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/LLC_BI__Spread_Statement_Record__c.object-meta.xml
<CustomObject>
    <label>Spread Statement Record</label>
    <nameField>
        <label>Spread Statement Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spread Statement Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>