force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Debit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is driven by user selection within the spreading application. When enabled, the spread statement record (chart of account) is treated as a debit. When disabled, the spread statement record is treated as a credit. By default, it is disabled.</description>
    <label>Debit</label>
    <type>Checkbox</type>
</CustomField>