force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Formula__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Formula__c</fullName>
    <description>Formula that determines the values in the row.</description>
    <label>Formula -D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>