force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Include_In_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Include_In_Total__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is optional. It is driven by user selection within the spreading application. When enabled, the spread statement record (chart of account) will not be displayed in the group and will not be used as part of the group&apos;s calculation. When disabled, it is display and used in the calculation. By default, it is disabled.</description>
    <label>Include In Total</label>
    <type>Checkbox</type>
</CustomField>