force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Operation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Operation__c</fullName>
    <description>This field is optional. It is driven by user selection within the spreading application. It indicates what type of mathematical operation should be performed on the spread statement record (chart of account) this spread statement record represents.</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
                <default>true</default>
                <label>ADD</label>
            </value>
            <value>
                <fullName>SUBTRACT</fullName>
            </value>
            <value>
                <fullName>MULTIPLY</fullName>
            </value>
            <value>
                <fullName>DIVIDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>