force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Operation_Multiply__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Operation_Multiply__c</fullName>
    <description>This field is optional. It is driven by the &quot;LLC_BI__Operation__c&quot; field. When enabled, the value for this spread statement record (chart of account) is multiplied to the currently calculated value in the group. When disabled, this field does nothing. This field is enabled whenever &quot;LLC_BI__Operation__c&quot; is &quot;MULTIPLY&quot;</description>
    <formula>ISPICKVAL(LLC_BI__Operation__c, &apos;MULTIPLY&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operation Multiply</label>
    <type>Checkbox</type>
</CustomField>