force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Period_Over_Period_Change__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Period_Over_Period_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. User updated. This field indicates whether the record values should show as a period over period change.</description>
    <inlineHelpText>Check this field to calculate period over period change</inlineHelpText>
    <label>Period Over Period Change</label>
    <type>Checkbox</type>
</CustomField>