force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Period_Over_Prior_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Period_Over_Prior_Fiscal_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. User updated. This field indicates whether the record values should show the period over fiscal year change of the linked record.</description>
    <inlineHelpText>Check this field to calculate the period over prior fiscal year.</inlineHelpText>
    <label>Period Over Prior Fiscal Year</label>
    <type>Checkbox</type>
</CustomField>