force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Record_Type__c</fullName>
    <description>This field is required. It is driven by user selected within the spreading application. It specifies the type of spread statement record (chart of account). &quot;Standard&quot; is the default selection, it is editable and relies on either user entry or links to function. &quot;Days In Period&quot; is non-editable and displays the days based on the statement date &amp; number of months. &quot;Debt Service&quot; is non-editable and displays the total debt service from the debt schedule. &quot;Rent Roll Annual Income&quot; is non-editable and displays the annual income from the rent roll within CRE. &quot;Simulated&quot; is non-editable and allows the spread statement record to be calculated via a formula, dictated by an attachment on the LLC_BI__Spread__c. By default, this is set to &quot;Standard&quot;</description>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Days In Period</fullName>
            </value>
            <value>
                <fullName>Debt Service</fullName>
            </value>
            <value>
                <fullName>Simulated</fullName>
            </value>
            <value>
                <fullName>Prepopulated</fullName>
            </value>
            <value>
                <fullName>Loan Assumptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>