force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Row_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Row_Number__c</fullName>
    <description>This field is optional. It is automatically set whenever a spread statement record (chart of account) is created in the spreading applicaiton. This field determines the order the spread statement records will be displayed within the group. This cannot be edited within the spreading application, it must be edited through the Salesforce interface.</description>
    <label>Row Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>