force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Source_Row__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Row__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system auto-populates this optional lookup field with the id of the cloned row from the Spreads Statement Record template.</description>
    <label>Source Row</label>
    <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
    <relationshipLabel>Cloned Spread Statement Records</relationshipLabel>
    <relationshipName>Cloned_Spread_Statement_Records</relationshipName>
    <type>Lookup</type>
</CustomField>