force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/fields/LLC_BI__Spread_Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Type__c</fullName>
    <description>This field is optional. It is populated automatically whenever the spread statement record (chart of account) is linked to a spread statement record. This field specifies the spread Statement record associated with the Spread Statement record. When linked, this spread statement record will always display the values of the spread statement record it is linked to.</description>
    <label>Spread Statement Type</label>
    <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
    <relationshipLabel>Spread Statement Records</relationshipLabel>
    <relationshipName>Spread_Statement_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>