force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/validationRules/LLC_BI__Cannot_calculate_period_over_period_val.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Cannot_calculate_period_over_period_val</fullName>
    <active>false</active>
    <description>Validation to ensure that we do not try to calculate period over period values for none linked records</description>
    <errorConditionFormula>AND(NOT(LLC_BI__Is_Linked__c), LLC_BI__Period_Over_Period_Change__c)</errorConditionFormula>
    <errorDisplayField>LLC_BI__Period_Over_Period_Change__c</errorDisplayField>
    <errorMessage>Cannot calculate period over period values for none linked records</errorMessage>
</ValidationRule>