force-app/main/default/objects/LLC_BI__Spread_Statement_Record__c/validationRules/LLC_BI__Cannot_link_to_Record_and_a_Total_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Cannot_link_to_Record_and_a_Total_Group</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
NOT(ISBLANK( LLC_BI__Linked_Spread_Statement_Record__c )),
NOT(ISBLANK( LLC_BI__Linked_Spread_Statement_Total_Group__c ))
)</errorConditionFormula>
    <errorDisplayField>LLC_BI__Linked_Spread_Statement_Record__c</errorDisplayField>
    <errorMessage>You may link to a Record or a Total Group, but not both.</errorMessage>
</ValidationRule>